// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: ChangePlanPage should not render form if not allowed to change plan 1`] = `
<div>
  <Page
    breadcrumbAction={
      Object {
        "Component": [Function],
        "content": "Back to billing",
        "to": "/account/billing",
      }
    }
    empty={Object {}}
  />
  <Component
    account={Object {}}
  />
  <Component
    account={Object {}}
  />
</div>
`;

exports[`Page: ChangePlanPage should render form if allowed to change plan 1`] = `
<div>
  <Page
    breadcrumbAction={
      Object {
        "Component": [Function],
        "content": "Back to billing",
        "to": "/account/billing",
      }
    }
    empty={Object {}}
  />
  <Component
    account={Object {}}
  />
  <Component
    account={Object {}}
  />
  <withRouter(Connect(ReduxForm)) />
</div>
`;
